<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.signUp.SignUpFragment">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_logo_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/content_description_app_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/travel_manics_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_email"
            style="@style/Widget.TravelMantics.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_logo_sign_up">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email_address"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_password"
            style="@style/Widget.TravelMantics.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_email"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/toggle_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_user_name"
            style="@style/Widget.TravelMantics.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_sign_up_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_user_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/btn_text_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_user_name" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_up_login"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/btn_text_login"
            app:layout_constraintBottom_toBottomOf="@+id/btn_sign_up"
            app:layout_constraintEnd_toStartOf="@+id/btn_sign_up"
            app:layout_constraintTop_toTopOf="@+id/btn_sign_up" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>