<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.add.AddFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_report_incidents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_report_incidents"
                style="@style/Widget.TravelMantics.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/toolbar_tittle_add_places"
                app:navigationIcon="@drawable/ic_arrow_back"/>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_location"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/place_holder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar_report_incidents" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_location_name"
            style="@style/Widget.TravelMantics.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_location">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_location_name"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_amount_to_save"
            style="@style/Widget.TravelMantics.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_location_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_amount_to_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_amount_to_save"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_add_place"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Add Place"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_amount_to_save" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>